Corrige arquivos executáveis do Windows